update, fixed some width-values in order to not have a horizontal scroll bar on the webpage.

--- a/Frontend/DAT257_Website/src/Components/InformationPage/InformationPage.css
+++ b/Frontend/DAT257_Website/src/Components/InformationPage/InformationPage.css
@@ -2,7 +2,7 @@ body {
     background-color: #28231C;
 }
 
-.wrapper {
+.wrapperInformation {
     padding: 5%;
     padding-inline: 20%;
     height: 100%;
